src/assets/styles/components/_sidebar.scss
.nav-menu {
  background-color: #f8f8f8;
  border-right: 1px solid #c4c4c4;
  width: 250px;
  box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.25);
}

.link {
  font-size: 2rem;
  font-weight: 700;
  color: #313131;
  display: grid;
  grid-template-columns: 10% 90%;
  gap: 10px;
  border-bottom: 1px solid #c4c4c4;
  padding: 23px;

  &:hover {
    color: $auxiliar-color2;
    padding: 23px;
  }

  &-active {
    font-size: 2rem;
    font-weight: 700;
    background-color: white;
    color: $auxiliar-color2;
    border-left: 4px solid $auxiliar-color2;
  }
}
.nav-menu__menuButon {
  display: none;
}
@include lg {
  .nav-menu {
    position: fixed;
    left: -300px;
    transition: 850ms;
  }
  .nav-menu.active {
    left: 0px;
    transition: 350ms;
  }
  .nav-menu__menuButon {
    opacity: 0.8;
    color: #ffffff;
    background-color: #313131;
    border-radius: 0 0 20px 0;
    padding: 6px;
    display: flex;
    font-size: 25px;
    cursor: pointer;
    position: fixed;
  }
  .nav-menu__menuButon.active {
    display: block;
    cursor: pointer;
    position: fixed;
  }
}

